# xtpath

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  ancestor_iterator.hpp  ancestor_selector.hpp  attribute_iterator.hpp  attribute_selector.hpp  child_iterator.hpp  child_selector.hpp  compile.sh  configure.ac  context.hpp  descendant_iterator.hpp  descendant_selector.hpp  name_selector.hpp  namespace_selector.hpp  parent_iterator.hpp  parent_selector.hpp  prepare_workspace.sh  pugi_adaptor.hpp  scopedmap.hpp  selector_common.hpp  singleton_iterator.hpp  text_selector.hpp  vdom_adaptor.hpp  xpath.hpp  xtpath.pc.in
config/: boost.m4
test/: Makefile.am  test_scopedmap.cpp  test_vdom_adaptor.cpp  test_xpath.cpp
