ACLOCAL_AMFLAGS=-I config

SUBDIRS=test

xtpathdir=$(includedir)/xtpath
xtpath_HEADERS=					\
	ancestor_iterator.hpp			\
	ancestor_selector.hpp			\
	attribute_iterator.hpp			\
	attribute_selector.hpp			\
	child_iterator.hpp			\
	child_selector.hpp			\
	context.hpp				\
	descendant_iterator.hpp			\
	descendant_selector.hpp			\
	name_selector.hpp			\
	namespace_selector.hpp			\
	parent_iterator.hpp			\
	parent_selector.hpp			\
	pugi_adaptor.hpp			\
	scopedmap.hpp				\
	selector_common.hpp			\
	singleton_iterator.hpp			\
	text_selector.hpp			\
	xpath.hpp

