check_PROGRAMS=					\
	test_scopedmap				\
	test_xpath

test_scopedmap_SOURCES=test_scopedmap.cpp
test_xpath_SOURCES=test_xpath.cpp

AM_CPPFLAGS=$(BOOST_CPPFLAGS) $(PUGIXML_CPPFLAGS)
AM_LDFLAGS=$(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(PUGIXML_LDFLAGS)
LIBS=$(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(PUGIXML_LIBS)

TESTS=$(check_PROGRAMS)
